[gd_scene load_steps=5 format=3 uid="uid://c7u1m6w3cex3j"]

[ext_resource type="Script" uid="uid://bqyncpl8kcdl0" path="res://addons/parley/components/condition/condition_editor.gd" id="1_majdh"]
[ext_resource type="PackedScene" uid="uid://dcaqonk76b5qj" path="res://addons/parley/components/editor/string_editor.tscn" id="2_dmc6l"]
[ext_resource type="Texture2D" uid="uid://c4qx01xbrjp7h" path="res://addons/parley/assets/Edit.svg" id="2_pylhe"]
[ext_resource type="Texture2D" uid="uid://dres8tr2nd82o" path="res://addons/parley/assets/Remove.svg" id="3_pylhe"]

[node name="ConditionEditor" type="PanelContainer"]
offset_right = 256.0
offset_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_majdh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ConditionEditorContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DataContainer" type="VBoxContainer" parent="MarginContainer/ConditionEditorContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FactContainer" type="HBoxContainer" parent="MarginContainer/ConditionEditorContainer/DataContainer"]
layout_mode = 2

[node name="FactLabel" type="Label" parent="MarginContainer/ConditionEditorContainer/DataContainer/FactContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Fact:"

[node name="FactSelector" type="OptionButton" parent="MarginContainer/ConditionEditorContainer/DataContainer/FactContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(150, 0)
text_overrun_behavior = 3
clip_text = true

[node name="EditFactButton" type="Button" parent="MarginContainer/ConditionEditorContainer/DataContainer/FactContainer"]
layout_mode = 2
tooltip_text = "Edit Action Script."
icon = ExtResource("2_pylhe")

[node name="OperatorContainer" type="HBoxContainer" parent="MarginContainer/ConditionEditorContainer/DataContainer"]
layout_mode = 2

[node name="OperatorLabel" type="Label" parent="MarginContainer/ConditionEditorContainer/DataContainer/OperatorContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Operator:"

[node name="OperatorEditor" type="OptionButton" parent="MarginContainer/ConditionEditorContainer/DataContainer/OperatorContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "Equal"
popup/item_0/id = 0
popup/item_1/text = "Not Equal"
popup/item_1/id = 1

[node name="ValueEditor" parent="MarginContainer/ConditionEditorContainer/DataContainer" instance=ExtResource("2_dmc6l")]
unique_name_in_owner = true
layout_mode = 2
key = "Value"
minimum_x = 150.0

[node name="ActionContainer" type="VBoxContainer" parent="MarginContainer/ConditionEditorContainer"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="MarginContainer/ConditionEditorContainer/ActionContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_pylhe")

[connection signal="item_selected" from="MarginContainer/ConditionEditorContainer/DataContainer/FactContainer/FactSelector" to="." method="_on_fact_selector_item_selected"]
[connection signal="pressed" from="MarginContainer/ConditionEditorContainer/DataContainer/FactContainer/EditFactButton" to="." method="_on_edit_fact_button_pressed"]
[connection signal="item_selected" from="MarginContainer/ConditionEditorContainer/DataContainer/OperatorContainer/OperatorEditor" to="." method="_on_operator_editor_item_selected"]
[connection signal="value_changed" from="MarginContainer/ConditionEditorContainer/DataContainer/ValueEditor" to="." method="_on_value_editor_value_changed"]
[connection signal="pressed" from="MarginContainer/ConditionEditorContainer/ActionContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
